Fixed bug #42785 (json_encode() formats doubles according to locale rather then following standard syntax).